# learn

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
devops/DevOps_for_Fresher/: 01-linux.md  02-git.md  03-cicd.md  04-docker.md  05-jenkins.md  06-monitoring.md  README.md
devops/kubernetes/: 00-overview.md  01-introduction.md  02-k8s_cluster_installation.md
